--- a/pro2/src/index.css
+++ b/pro2/src/index.css
@@ -1,5 +1,11 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+#root{
+    display: grid;
+    grid-gap: 100px;
+    grid-template-areas:
+    ". title ."
+    ". main .";
+}
+
+.title {
+    grid-area: title;
 }
