--- a/pro2/src/App.css
+++ b/pro2/src/App.css
@@ -1,41 +1,41 @@
-@media all and (orientation:landscape) {
+@media all and (orientation: landscape) {
   .App {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-auto-rows: minmax(100px, auto);
     grid-template-areas:
-     "header header header header header"
-     "tab1 tab2 tab3 tab4 ."
-     "content content content content check_box"
-     "content content content content check_box"
-     "content content content content check_box"
-     "content content content content ."
-     "footer footer footer footer footer";
+      "header header header header header"
+      "tabRow tabRow tabRow tabRow ."
+      "content content content content check_box"
+      "content content content content check_box"
+      "content content content content check_box"
+      "content content content content ."
+      "footer footer footer footer footer";
     padding: 0;
     font-family: sans-serif;
     width: 100%;
   }
 }
 
-@media all and (orientation:portrait) {
+@media all and (orientation: portrait) {
   .App {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-auto-rows: minmax(100px, auto);
     grid-template-areas:
-     "header header header header"
-     "tab1 tab2 tab3 tab4"
-     "content content content content"
-     "content content content content"
-     "check_box check_box check_box check_box"
-     "footer footer footer footer";
+      "header header header header"
+      "tabRow tabRow tabRow tabRow"
+      "content content content content"
+      "content content content content"
+      "check_box check_box check_box check_box"
+      "footer footer footer footer";
     padding: 0;
     font-family: sans-serif;
     width: 100%;
   }
 }
 
-.header{
+.header {
   grid-area: header;
   display: inline;
   margin: 0;
@@ -49,55 +49,70 @@
   text-align: center;
 }
 
-.picture_box{
+.picture_box {
   border: 0.5em solid black;
   height: 40%;
   width: inherit;
 }
 
-.quote_box{
+.quote_box {
   background-color: pink;
   height: 25%;
   width: inherit;
 }
 
-.footer{
+.footer {
   grid-area: footer;
   text-align: center;
 }
 
-.tab1{
+.tabRow {
+  grid-area: tabRow;
+  display: grid;
+  grid-template-areas: "tab1 tab2 tab3 tab4";
+  width: 100%;
+}
+
+div > .tabRow {
+  text-align: center;
+}
+
+#tab1 {
   grid-area: tab1;
+  height: 100px;
   background-color: #66ff33;
 }
-.tab2{
+#tab2 {
   grid-area: tab2;
+  height: 100px;
   background-color: #0066cc;
 }
-.tab3{
+#tab3 {
   grid-area: tab3;
   background-color: #6699ff;
 }
-.tab4{
+#tab4 {
   grid-area: tab4;
   background-color: #9966ff;
 }
 
-.check_box{
+.check_box {
   grid-area: check_box;
   background-color: #ff33ff;
-  text-align: center
+  text-align: center;
 }
 
 img.resize {
-  width:100%; /* you can use % */
+  width: 100%; /* you can use % */
   height: auto;
 }
 
-#button:hover{background-color: #F4D03F}
+.button:hover {
+  background-color: #f4d03f;
+}
 
-#button:active {
-  background-color: #F4D03F;
+.button:active {
+  background-color: #f4d03f;
   box-shadow: 0px 5px #666;
   transform: translateY(4px);
 }
