Har gjort ganske store endringer, håper jeg ikke gjorde så veldig mye feil... noen små problemer med lasting av bilder og tekst, henger bittelitt etter #15

--- a/pro2/src/App.css
+++ b/pro2/src/App.css
@@ -76,6 +76,14 @@ img.resize {
   width: 100%; /* you can use % */
   height: auto;
 }
+.button {
+  grid-area: tabRow;
+}
+
+.labels {
+  width: 300px;
+  height: 30px;
+}
 
 .button:hover {
   background-color: #f4d03f;
