--- a/pro2/src/App.css
+++ b/pro2/src/App.css
@@ -1,85 +1,92 @@
-@media all and (orientation: landscape) {
+@media screen and (max-width: 420px) {
   .App {
+    height: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-auto-rows: auto;
+    grid-template-columns: 1fr;
     grid-template-areas:
-      "header header header header header"
-      "tab1 tab tab tab ."
-      "content content content content check_box"
-      "content content content content check_box"
-      "content content content content check_box"
-      "content content content content .";
-    padding: 0;
-    font-family: sans-serif;
-    width: 100%;
+      "header header header header"
+      "tabs tabs tabs tabs"
+      "cb cb cb cb"
+      "media media media media";
+    /*footer*/
+  }
+
+  .tabRow {
+    display: grid;
+    grid-template-areas: "tab1 tab2 tab3 tab4";
+  }
+
+  .check_box  {
+    display: grid;
+    grid-template-areas: "groupimg grouptxt groupsound";
+  }
+
+  .media {
+    border: 1px solid red;
+  }
+
+  .imgBox {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  svg {
+    width: 200px;
+    height: 400px;
+    margin-left: 20px;
+    margin-right: auto;
   }
 }
 
-@media all and (orientation: portrait) {
-  .App {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-auto-rows: minmax(100px, auto);
-    grid-template-areas:
-      "content content content content"
-      "content content content content"
-      "check_box check_box check_box check_box";
-    padding: 0;
-    font-family: sans-serif;
-    width: 100%;
-  }
+.groupimg {
+  grid-area: groupimg;
+}
+
+.grouptxt {
+  grid-area: grouptxt;
+}
+
+.groupsound  {
+  grid-area: gridsound;
+}
+
+.check_box {
+  grid-area: cb;
+  border: 1px solid black;
+  margin-bottom: 50px;
+}
+
+.tabRow {
+  grid-area: tabs;
 }
 
 .header {
   grid-area: header;
   background-color: #ffffff;
   text-align: center;
-}
-
-.tabRow #1{
-  grid-area: tab1;
-  display: inline;
-}
-
-
-.content {
-  grid-area: content;
-  display: inline;
-  text-align: center;
-}
-
-.exhibition {
   width: 100%;
-  height: 40%;
-  min-height:500px;
 }
 
-.imgBox {
-  height: 100%;
-  width: 50%;
-  margin: auto auto auto auto;
-  border: 1px solid;
-}
-
-.check_box {
-  grid-area: check_box;
-  background-color: #ff33ff;
+/* all tabs */
+div.tabRow > div {
+  border: 1px solid black;
+  margin: 1em;
   text-align: center;
 }
 
-
-.labels {
-  width: 300px;
-  height: 30px;
+.tab1 {
+  grid-area: tab1;
 }
 
-.button:hover {
-  background-color: #f4d03f;
+.tab2 {
+  grid-area: tab2;
 }
 
-.button:active {
-  background-color: #f4d03f;
-  box-shadow: 0px 5px #666;
-  transform: translateY(4px);
+.tab3 {
+  grid-area: tab3;
+}
+
+.tab4 {
+  grid-area: tab4;
 }
