--- a/pro2/src/App.css
+++ b/pro2/src/App.css
@@ -1,42 +1,58 @@
-@media screen and (max-width: 420px) {
-  .App {
-    height: 100%;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-areas:
-      "header header header header"
-      "tabs tabs tabs tabs"
-      "cb cb cb cb"
-      "media media media media";
-    /*footer*/
-  }
+/* Mobile first */
+.App {
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-areas:
+    "header header header header"
+    "cb cb cb cb"
+    "tabs tabs tabs tabs"
+    "media media media media";
+  /*footer*/
+}
 
-  .tabRow {
-    display: grid;
-    grid-template-areas: "tab1 tab2 tab3 tab4";
-  }
+.tabRow {
+  display: grid;
+  grid-template-areas: "tab1 tab2 tab3 tab4";
+  border-bottom: 1px solid black;
+  margin-bottom: 20px;
+}
 
-  .check_box  {
-    display: grid;
-    grid-template-areas: "groupimg grouptxt groupsound";
-  }
+.tabRow > div {
+  height: 20px;
+  border-radius: 10px;
+}
 
+.check_box {
+  grid-template-areas: "groupimg grouptxt groupsound";
+}
+
+/*
   .media {
     border: 1px solid red;
   }
+*/
+.imgBox {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  height: 150px; /*Slett denne om quote skal følge bilde i høyde*/
+}
 
-  .imgBox {
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-  }
+svg {
+  max-width: 200px;
+  max-height: 150px;
+  margin-left: 20px; /* center image is missing */
+  margin-right: auto;
+}
 
-  svg {
-    width: 200px;
-    height: 400px;
-    margin-left: 20px;
-    margin-right: auto;
-  }
+.quotebox {
+  border-top: 1px solid black;
+  text-align: center;
+}
+
+.check_box > div > p {
+  text-align: center;
 }
 
 .groupimg {
@@ -54,7 +70,12 @@
 .check_box {
   grid-area: cb;
   border: 1px solid black;
-  margin-bottom: 50px;
+  display: grid;
+}
+
+.check_box > div > label {
+  display: block;
+  text-align: right;
 }
 
 .tabRow {
@@ -75,6 +96,12 @@ div.tabRow > div {
   text-align: center;
 }
 
+div.tabRow > div:hover {
+  cursor: pointer;
+}
+
+/*TODO: Add an active feat. */
+
 .tab1 {
   grid-area: tab1;
 }
@@ -89,4 +116,58 @@ div.tabRow > div {
 
 .tab4 {
   grid-area: tab4;
+}
+
+label > input {
+  cursor: pointer;
+}
+
+/* Tablet size */
+@media screen and (min-width: 767px) {
+  .App {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "header header header header"
+      "cb cb cb cb "
+      "tabs tabs tabs tabs"
+      "media media media media";
+    /*footer*/
+  }
+
+  .tabRow {
+    display: grid;
+    grid-template-areas: "tab1 tab2 tab3 tab4";
+  }
+  /* tabs */
+  .tabRow > div {
+    height: 100px;
+    border-radius: 10px;
+  }
+
+  .check_box {
+    display: grid;
+    grid-template-areas: "groupimg grouptxt groupsound";
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+  }
+
+  .imgBox {
+    width: 100%;
+    height: 500px;
+  }
+
+  svg {
+    max-width: 500px;
+    max-height: 100%;
+    margin-left: 25%;
+    /* center image is missing */
+  }
+}
+
+/* Desktop*/
+@media screen and (min-width: 1200px) {
 }
