--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,9 @@
   grid-template-columns: 1fr;
   grid-template-areas:
     "header header header header"
-    "cb cb cb cb"
     "tabs tabs tabs tabs"
-    "media media media media";
+    "media media media media"
+    "cb cb cb cb";
   /*footer*/
 }
 
@@ -63,14 +63,22 @@ svg {
 
 .check_box {
   grid-area: cb;
-  border-radius: 1em;
-  background-color: lightblue;
+  background-color: #9e9e9e;
   display: grid;
+}
+
+.check_box > div > p {
+  font-size: 1.2em;
+  margin: 5px;
+  border-bottom: 0.3px solid black;
 }
 
 .check_box > div > label {
   display: block;
   text-align: right;
+  font-size: 1.2em;
+  margin-bottom: 0.3em;
+  cursor: pointer;
 }
 
 .tabRow {
@@ -82,15 +90,17 @@ svg {
   background-color: #ffffff;
   text-align: center;
   width: 100%;
+  margin-top: -1em;
+  margin-bottom: -1em;
 }
-
 /* all tabs */
+
 div.tabRow > div {
-  background-color: lightblue;
-  margin: 1em;
+  background-color: #9e9e9e;
+  margin-top: 0.5em;
+  border: 0.2px solid #414141;
   text-align: center;
   height: 20px;
-  border-radius: 1em;
 }
 
 div.tabRow > div:active {
