--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
 /* Mobile first */
+#root {
+  height: 100%;
+}
+
 .App {
   height: 100%;
   display: grid;
   grid-template-columns: 1fr;
+  grid-template-rows: 10% 10% 60% 20%;
   grid-template-areas:
     "header header header header"
     "tabs tabs tabs tabs"
@@ -24,13 +29,14 @@
 
 .media {
   grid-area: media;
+  height: 100%;
 }
 
 .imgBox {
   width: 50%;
   margin-left: auto;
   margin-right: auto;
-  height: 50%; /*Slett denne om quote skal følge bilde i høyde*/
+  height: 70%; /*Slett denne om quote skal følge bilde i høyde*/
 }
 
 svg {
@@ -65,6 +71,14 @@ svg {
   grid-area: cb;
   background-color: #9e9e9e;
   display: grid;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+
+.media {
+  height: 80%;
 }
 
 .check_box > div > p {
@@ -104,7 +118,7 @@ div.tabRow > div {
 }
 
 div.tabRow > div:active {
-  background-color: blue;
+  background-color: #1a1a1a;
 }
 
 div.tabRow > div:hover {
@@ -131,6 +145,10 @@ div.tabRow > div:hover {
 
 label > input {
   cursor: pointer;
+}
+
+input[type="radio"] {
+  background: black;
 }
 
 /* Tablet size */
