--- a/src/App.css
+++ b/src/App.css
@@ -201,6 +201,7 @@ input[type="radio"] {
   }
 
   .check_box {
+    position: initial;
     width: 120px;
     grid-template-areas:
       "groupimg"
