--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@
   margin: 2px;
   font-size: 0.8em;
   padding: 0.5em;
+  cursor: pointer;
 }
 
 .tabRow {
@@ -351,5 +352,9 @@ input[type="radio"] {
 
   div > h1 {
     grid-area: h1;
+  }
+
+  .exhibition {
+    height: 290px;
   }
 }
